<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/credit_card"
        android:icon="@drawable/ic_baseline_credit_card_24"
        android:title="@string/credit_card_payment_title"
        app:showAsAction="always" />

</menu>